fixed AbstractGraphQlController and BooksGraphQLController